# pico-playground

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
apps/: CMakeLists.txt
apps/watch/: CMakeLists.txt  watch.c
dev_tools/: format.py  get_version.py  requirements.txt
libs/: CMakeLists.txt
libs/STMicroelectronicsFonts/: CMakeLists.txt
libs/STMicroelectronicsFonts/include/Fonts/: fonts.h
libs/STMicroelectronicsFonts/src/: font12.c  font16.c  font20.c  font24.c  font8.c
libs/WaveshareConfig/: CMakeLists.txt
libs/WaveshareConfig/include/: DEV_Config.h
libs/WaveshareConfig/src/: DEV_Config.c
libs/WaveshareGUI/: CMakeLists.txt
libs/WaveshareGUI/include/: GUI_Paint.h
libs/WaveshareGUI/src/: GUI_Paint.c
libs/WaveshareLCD/: CMakeLists.txt
libs/WaveshareLCD/include/: LCD_1in28.h
libs/WaveshareLCD/src/: LCD_1in28.c
libs/WaveshareQMI8658/: CMakeLists.txt
libs/WaveshareQMI8658/include/: QMI8658.h
libs/WaveshareQMI8658/src/: QMI8658.c
