# 3rd party
add_subdirectory(WaveshareConfig)           # https://www.spotpear.com/index.php/index/study/detail/id/761.html
add_subdirectory(WaveshareGUI)              # https://www.spotpear.com/index.php/index/study/detail/id/761.html
add_subdirectory(WaveshareLCD)              # https://www.spotpear.com/index.php/index/study/detail/id/761.html
add_subdirectory(WaveshareQMI8658)          # https://www.spotpear.com/index.php/index/study/detail/id/761.html
add_subdirectory(STMicroelectronicsFonts)   # https://github.com/STMicroelectronics/STM32CubeL1/tree/master/Utilities/Fonts
